--- a/Project2.Rmd
+++ b/Project2.Rmd
@@ -1,6 +1,7 @@
 ---
 output: 
   html_document: 
+    df_print: default
     keep_md: yes
 ---
 --
@@ -20,26 +21,26 @@ date: "May 6, 2018"
 output: html_fragment
 ---
 
-
-
 #1.Synopsis
 
-###Storms and other severe weather events can cause both public health and economic problems for communities and municipalities. Many severe events can result in fatalities, injuries, and property damage, and preventing such outcomes to the extent possible is a key concern.
+Storms and other severe weather events can cause both public health and economic problems for communities and municipalities. Many severe events can result in fatalities, injuries, and property damage, and preventing such outcomes to the extent possible is a key concern.
 
-###This project involves exploring the U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database. This database tracks characteristics of major storms and weather events in the United States, including when and where they occur, as well as estimates of any fatalities, injuries, and property damage.
+This project involves exploring the U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database. This database tracks characteristics of major storms and weather events in the United States, including when and where they occur, as well as estimates of any fatalities, injuries, and property damage.
 
-###In this report,effect of weather events on personal as well as property damages was studied. Barplots were plotted seperately for the top 8 weather events that causes highest fatalities and highest injuries. Results indicate that most Fatalities and injuries were caused by Tornados.Also, barplots were plotted for the top 8 weather events that causes the highest property damage and crop damage.
+In this report,effect of weather events on personal as well as property damages was studied. Barplots were plotted seperately for the top 8 weather events that causes highest fatalities and highest injuries. Results indicate that most Fatalities and injuries were caused by Tornados.Also, barplots were plotted for the top 8 weather events that causes the highest property damage and crop damage.
 
 #Questions Addressed
 
-###1.Across the United States, which types of events are most harmful with respect to population health?
+####1.Across the United States, which types of events are most harmful with respect to population health?
 
-###2.Across the United States, which types of events have the greatest economic consequences?
+####2.Across the United States, which types of events have the greatest economic consequences?
+
 
 #2.Data Processing
 
 ##Loading the data
-###The data was downloaded from the above mentioned website and saved on local computer. Then it was loaded on the R using the following code.
+
+The data was downloaded from the above mentioned website and saved on local computer. Then it was loaded on the R using the following code.
 
 ```{r}
 library(plyr)
@@ -55,16 +56,16 @@ names(storm)
 dim(storm)
 ```
 ##Extracting the required data
-###This dataset consists of lot of information most of which is not required for our present study. So, here is the code to extract the required data for health and economic impact analysis against weather.
 
+This dataset consists of lot of information most of which is not required for our present study. So, here is the code to extract the required data for health and economic impact analysis against weather.
 
 ```{r}
 stormDataRed <- storm[,c("EVTYPE", "FATALITIES", "INJURIES", "PROPDMG","PROPDMGEXP","CROPDMG","CROPDMGEXP")]
 ```
 
-
 ##Population Health
-###The fatalaties as well as the injuries are summarized according to the event type and then, respectively, ordered decreasingly.
+
+The fatalaties as well as the injuries are summarized according to the event type and then, respectively, ordered decreasingly.
 
 ```{r}
 harm2health <- ddply(stormDataRed, .(EVTYPE), summarize,fatalities = sum(FATALITIES),injuries = sum(INJURIES))
@@ -73,7 +74,8 @@ injury <- harm2health[order(harm2health$injuries, decreasing = T), ]
 ```
 
 ##Economic Consequences
-###Since the exponential values are stored in a seperate column describing their value with letters (h = hundred, k = thousand, m = million, b = billion), the calucalion of the financial damage turns out to be slightly tricky. In a first step a function that converts the letter value of the exponent to a usable number must be implemented.
+
+Since the exponential values are stored in a seperate column describing their value with letters (h = hundred, k = thousand, m = million, b = billion), the calucalion of the financial damage turns out to be slightly tricky. In a first step a function that converts the letter value of the exponent to a usable number must be implemented.
 
 ```{r}
 getExp <- function(e) {
@@ -95,7 +97,7 @@ getExp <- function(e) {
 }
 ```
 
-###Then, using this function, the proper values are calculated for property damage and crop damage
+Then, using this function, the proper values are calculated for property damage and crop damage
 
 
 ```{r}
@@ -105,9 +107,9 @@ cropExp <- sapply(stormDataRed$CROPDMGEXP, FUN=getExp)
 stormDataRed$cropDamage <- stormDataRed$CROPDMG * (10 ** cropExp)
 ```
 
-###Now the financial damage for crops and property have to be summarized according to the event type,
-###events not causing any financial damage will be omitted,
-###and finally, the data is sorted decreasingly:
+Now the financial damage for crops and property have to be summarized according to the event type,
+events not causing any financial damage will be omitted,
+and finally, the data is sorted decreasingly:
 
 ```{r}
 econDamage <- ddply(stormDataRed, .(EVTYPE), summarize,propDamage = sum(propDamage), cropDamage = sum(cropDamage))
@@ -118,7 +120,7 @@ cropDmgSorted <- econDamage[order(econDamage$cropDamage, decreasing = T), ]
 
 #3.Results 
 
-###Lists of the Top 5 weather events affecting the populations health (injuries and deaths) are shown. For injuries as well as fatal events the most devastating events are tornados in the given time period.
+Lists of the Top 5 weather events affecting the populations health (injuries and deaths) are shown. For injuries as well as fatal events the most devastating events are tornados in the given time period.
 
 
 ```{r}
@@ -131,7 +133,7 @@ head(fatal[, c("EVTYPE", "fatalities")],5)
 ```
 
 
-###The plots of the Top 10 events paint an even clearer picture:
+The plots of the Top 10 events paint an even clearer picture:
 
 ```{r}
 p1 <- ggplot(data=head(injury,10), aes(x=reorder(EVTYPE, injuries), y=injuries)) +
@@ -148,11 +150,13 @@ p2 <- ggplot(data=head(fatal,10), aes(x=reorder(EVTYPE, fatalities), y=fatalitie
 grid.arrange(p1, p2, nrow =2)
 ```
 
-###Again the plots show, that tornados are by far the most dangerous events when it comes to population health. Heat and floods also seem to cause a high number of deaths and injuries
+Again the plots show, that tornados are by far the most dangerous events when it comes to population health. Heat and floods also seem to cause a high number of deaths and injuries
 
 ##Economic Consequences
-#Lists of the Top 5 weather events causing financial damage to both property and crops are shown below. For property flash floods, thunderstorms and tornados seem to cause by far the most damage (orders of magnitude above the other event types!).
-#Probably little suprising the weather event causing most financial damage in respect to agriculture (i.e. crops) is drought. Noteworthy damage is also done by flood events as well as hail and ice storms.
+
+Lists of the Top 5 weather events causing financial damage to both property and crops are shown below. For property flash floods, thunderstorms and tornados seem to cause by far the most damage (orders of magnitude above the other event types!).
+
+Probably little suprising the weather event causing most financial damage in respect to agriculture (i.e. crops) is drought. Noteworthy damage is also done by flood events as well as hail and ice storms.
 
 ```{r}
 head(propDmgSorted[, c("EVTYPE", "propDamage")], 5)
@@ -162,7 +166,7 @@ head(propDmgSorted[, c("EVTYPE", "propDamage")], 5)
 head(cropDmgSorted[, c("EVTYPE", "cropDamage")], 5)
 ```
 
-###The findings described above become even more evident when we plot the Top 10 events for both property and crop damage! (Note that for plotting the property damage a logarithmic scale was used in order to increase the readability of the plot)
+The findings described above become even more evident when we plot the Top 10 events for both property and crop damage! (Note that for plotting the property damage a logarithmic scale was used in order to increase the readability of the plot)
 
 ```{r}
 p1 <- ggplot(data=head(propDmgSorted,10), aes(x=reorder(EVTYPE, propDamage), y=log10(propDamage), fill=propDamage )) +
@@ -179,5 +183,5 @@ p2 <- ggplot(data=head(cropDmgSorted,10), aes(x=reorder(EVTYPE, cropDamage), y=c
 grid.arrange(p1, p2, ncol=1, nrow =2)
 ```
 
-###The plot showed that flood, hirricane/typhoon and tornado hit the properties the hardest while drought and different types of flood hit the crop the hardest.
+The plot showed that flood, hirricane/typhoon and tornado hit the properties the hardest while drought and different types of flood hit the crop the hardest.
 
